// Copyright 2022 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.calculator";
option java_outer_classname = "CalculatorProto";
option objc_class_prefix = "HLW";

package calculator;

message ArithmeticOpArguments {
  double arg1 = 1;
  double arg2 = 2;
}

message ArithmeticOpResult {
  double res = 1;
}

message ArithmeticOperation {
  string operation = 1;
  ArithmeticOpArguments arguments = 2;
}

message MultipleArithmeticOperations {
  repeated ArithmeticOperation operations = 1;
}

service Calculator {
  rpc Add (ArithmeticOpArguments) returns (ArithmeticOpResult) {}
  rpc Subtract (ArithmeticOpArguments) returns (ArithmeticOpResult) {}
  rpc ManyArithmeticOperations (MultipleArithmeticOperations) returns (ArithmeticOpResult) {}
}


